<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.5</version>
        <relativePath/>
    </parent>
    <groupId>cn.zhangchuangla.medicine</groupId>
    <artifactId>Medicine</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Medicine</name>
    <description>Medicine</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>21</java.version>
        <spring-ai.version>1.0.1</spring-ai.version>
        <spring-ai-alibaba.version>1.0.0.3</spring-ai-alibaba.version>
        <mybatis-plus.version>3.5.12</mybatis-plus.version>
        <druid.version>1.2.24</druid.version>
        <mysql.version>8.3.0</mysql.version>
        <springdoc.version>2.8.3</springdoc.version>
        <minio.version>8.5.17</minio.version>
        <jjwt.version>0.11.5</jjwt.version>
        <guava.version>32.1.2-jre</guava.version>
        <commons-lang3.version>3.18.0</commons-lang3.version>
        <fastjson.version>2.0.53</fastjson.version>
        <ip2region.version>2.7.0</ip2region.version>
        <swagger-annotations.version>2.2.22</swagger-annotations.version>
        <alipay-sdk.version>4.34.0.ALL</alipay-sdk.version>
        <lombok.version>1.18.34</lombok.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>cn.zhangchuangla.medicine</groupId>
                <artifactId>medicine-common-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.zhangchuangla.medicine</groupId>
                <artifactId>medicine-common-redis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.zhangchuangla.medicine</groupId>
                <artifactId>medicine-common-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.zhangchuangla.medicine</groupId>
                <artifactId>medicine-common-storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.zhangchuangla.medicine</groupId>
                <artifactId>medicine-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.zhangchuangla.medicine</groupId>
                <artifactId>medicine-ai</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-extension</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-3-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lionsoul</groupId>
                <artifactId>ip2region</artifactId>
                <version>${ip2region.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud.ai</groupId>
                <artifactId>spring-ai-alibaba-graph-core</artifactId>
                <version>${spring-ai-alibaba.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.zhangchuangla.medicine</groupId>
                <artifactId>medicine-payment</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alipay.sdk</groupId>
                <artifactId>alipay-sdk-java</artifactId>
                <version>${alipay-sdk.version}</version>
                <exclusions>
                    <!-- CVE-2020-10683, CVE-2018-1000632: Exclude vulnerable dom4j -->
                    <exclusion>
                        <groupId>dom4j</groupId>
                        <artifactId>dom4j</artifactId>
                    </exclusion>
                    <!-- Multiple CVEs: Exclude vulnerable Bouncy Castle -->
                    <exclusion>
                        <groupId>org.bouncycastle</groupId>
                        <artifactId>bcprov-jdk15on</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <!-- Security patches for vulnerable dependencies -->
            <!-- CVE-2024-7254: Stack overflow vulnerability in protobuf-java -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>4.29.5</version>
            </dependency>

            <!-- CVE-2025-11226: ACE vulnerability in logback-core -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>1.5.19</version>
            </dependency>

            <!-- 统一 logback-classic 版本与 logback-core 保持一致 -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.5.19</version>
            </dependency>

            <!-- CVE-2024-25710, CVE-2024-26308: Infinite loop and resource allocation vulnerabilities -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>1.27.1</version>
            </dependency>

            <!-- CVE-2021-29425, CVE-2024-47554: Path traversal and resource consumption vulnerabilities -->
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.16.1</version>
            </dependency>

            <!-- Multiple CVEs (CVE-2019-17359, CVE-2024-29857, CVE-2024-30172, CVE-2024-30171, CVE-2023-33202, CVE-2023-33201): Various cryptographic vulnerabilities -->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>1.80</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>medicine-common</module>
        <module>medicine-model</module>
        <module>medicine-admin</module>
        <module>medicine-client</module>
        <module>medicine-ai</module>
        <module>medicine-payment</module>
    </modules>
</project>
